version 1.0.8 (not yet released)
--------------------------------
* don't assume grid is regular when adding cyclic point in addcyclic. 
  New kwargs 'axis' and 'cyclic' added.  More than one array
  can be handled at a time, as long as the last one is longitude. Issue 139.
* fix for coastline drawing glitch (issue 123).
* update shapefile.py to version 1.2.0 from pyshp.googlecode.com. Add back
  in modification clobbered in upgrade to version 1.1.7 (issue 30).
* added 'facecolor' keyward argument to drawcounties() method; gives user
  ability to fill counties with specified matplotlib color argument.
* fix drawgreatcircle bug so that lines exiting and reentering a projection
  region don't draw horizontally across the map. 
* on non-windows platforms, only link against libgeos C API (and not against
  C++ API anymore; issue 140). This is recommended by the authors/maintainers
  of GEOS.  Also, this means that on e.g. Debian Linux, basemap can now be
  installed from source simply using 'pip install basemap' when the libgeos
  packages are installed globally using the package management.

version 1.0.7 (git tag v1.0.7rel)
---------------------------------
* include mpl_toolkits/__init__.py, since the one installed by matplotlib
  is now inaccessible inside an egg (in 1.4.x).  Make basemap a 'namespace
  package'.  Issue 114.
* fix drawmeridians so meridians reach edge of plot when map projection region
  is *very* small (issue 113).
* update pyproj (with fixes to geodesic calculations).
* support for rotated pole transformation (projection = 'rotpole').
* fix warpimage with projection = 'hammer' (issue 100).
* fix tolerances for detecting jumps in meridians and parallels for
  cyl and rotpole projections (issue 108).
* fix clipping to map projection region done in contourf and contour methods
  so it doesn't assume x and y are increasing (issue 110).

version 1.0.6 (git tag v1.0.6rel)
--------------------------------
* fix drawcounties for Python 3.3.